_build/html/reports/extra_exercises.log
Traceback (most recent call last):
  File "c:\users\rosemary yu\miniconda3\lib\site-packages\jupyter_cache\executors\utils.py", line 51, in single_nb_execution
    executenb(
  File "c:\users\rosemary yu\miniconda3\lib\site-packages\nbclient\client.py", line 1204, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "c:\users\rosemary yu\miniconda3\lib\site-packages\nbclient\util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
  File "c:\users\rosemary yu\miniconda3\lib\site-packages\nbclient\util.py", line 62, in just_run
    return loop.run_until_complete(coro)
  File "c:\users\rosemary yu\miniconda3\lib\asyncio\base_events.py", line 642, in run_until_complete
    return future.result()
  File "c:\users\rosemary yu\miniconda3\lib\site-packages\nbclient\client.py", line 663, in async_execute
    await self.async_execute_cell(
  File "c:\users\rosemary yu\miniconda3\lib\site-packages\nbclient\client.py", line 965, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "c:\users\rosemary yu\miniconda3\lib\site-packages\nbclient\client.py", line 862, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
def hamming(s, t):
    # adapt this function with your own code

print(hamming("ACTG", "ACTG"))
print(hamming("ACTG", "GTCA"))
print(hamming("AACC", "AATT") + hamming("CTGA", "TCGA"))
------------------

[1;36m  Input [1;32mIn [3][1;36m[0m
[1;33m    print(hamming("ACTG", "ACTG"))[0m
[1;37m    ^[0m
[1;31mIndentationError[0m[1;31m:[0m expected an indented block

IndentationError: expected an indented block (2544117002.py, line 4)

